# Blockchain-Messaging-System

./: .clang-format  .gitignore  CMakeLists.txt  ConnectionHandler.hpp  Consumer.hpp  NodeConfiguration.hpp  Producer.cpp  Producer.hpp  README.md  Utils.hpp  build.sh
client/: CMakeLists.txt  README.md
client/docs/: client_send_data_to_blockchain_simple_case.puml
client/src/: AmqpHandler.cpp  AmqpHandler.hpp  App.cpp  CMakeLists.txt  Client.cpp  Client.hpp  ClientAMQP.cpp  ClientAMQP.hpp  ClientInfo.hpp  Gui.cpp  Nodes.yaml  README.md  Utils.cpp  Utils.hpp  WebsocketHandler.cpp  WebsocketHandler.hpp
common/: Buffer.hpp  CMakeLists.txt  Channel.hpp  ChannelStore.hpp  ConnectionHandler.hpp  NodeConfiguration.hpp  common.cpp
common/cmake/: add_ut.cmake
common/itf/: Block.cpp  Block.hpp  BlockState.hpp  CMakeLists.txt  Channel.hpp  Constants.hpp  Header.cpp  Header.hpp  Message.cpp  Message.hpp
common/serialization/: BlockSerializer.hpp  CMakeLists.txt  HeaderSerializer.hpp  MessageSerializer.hpp  Serializer.hpp
common/src/: CMakeLists.txt
common/utils/: CMakeLists.txt  Text.cpp  Text.hpp  Time.cpp  Time.hpp  Timer.hpp  Timestamp.cpp  Timestamp.hpp  Utils.hpp
common/utils/ut/: CMakeLists.txt  TestTimer.cpp
common/utils/ut/mocks/: TimeMock.hpp  TimerMock.hpp
db/: CMakeLists.txt  main_simple_list_example.cpp
docs/: broadcast.puml  notes.txt  simple.puml
gateway/: CMakeLists.txt  README.md
gateway/src/: App.cpp  Beast.hpp  CMakeLists.txt  Gateway.cpp  Gateway.hpp  GatewayAsync.cpp  GatewayAsync.hpp  HTTPServer.cpp  HTTPServer.hpp  Listener.cpp  Listener.hpp  WebSocketServer.cpp  WebSocketServer.hpp
itf/: Block.hpp  Message.hpp
node/: CMakeLists.txt  Dockerfile  README.md
node/cmake/: FindLibev.cmake
node/docs/: broadcast.puml  simple.puml
node/examples/config/NodeA/: config.yaml
node/examples/config/NodeB/: config.yaml
node/examples/config/NodeC/: config.yaml
node/src/: App.cpp  Buffer.cpp  Buffer.hpp  CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.hpp  ConnectionHandler.hpp  Consumer.cpp  Consumer.hpp  NodeConfiguration.hpp  Producer.cpp  Producer.hpp  Utils.cpp  Utils.hpp
node/src/common/: CMakeLists.txt
node/src/common/utils/: CMakeLists.txt  Utils.cpp  Utils.hpp
node/src/db/: CMakeLists.txt  ConsensusContext.hpp  ConsensusStorage.cpp  ConsensusStorage.hpp  RedisDB.cpp  RedisDB.hpp  tmp_snapshot.cpp
node/src/db/ut/mocks/: RedisDBMock.hpp
node/src/io/: CMakeLists.txt  Channel.cpp  Channel.hpp  ChannelStore.cpp  ChannelStore.hpp  ChannelType.hpp  ConnectionData.cpp  ConnectionData.hpp  ConnectionStore.cpp  ConnectionStore.hpp  ConsensusChannel.hpp  ConsensusOperation.hpp  ContributionWrapper.hpp  ContributionWrapperSerializer.hpp  ElectionValueWrapper.hpp  ElectionValueWrapperSerializer.hpp  Header.hpp  HeaderSerializer.hpp  RandomNumberGenerator.cpp  RandomNumberGenerator.hpp  Utils.hpp
node/src/itf/: Block.cpp  Block.hpp  CMakeLists.txt  Header.cpp  Header.hpp  Message.cpp  Message.hpp
node/src/serialization/: BlockSerializer.hpp  CMakeLists.txt  HeaderSerializer.hpp  MessageSerializer.hpp  Serializer.hpp
node/src/slot/: BroadcastNotifier.cpp  BroadcastNotifier.hpp  BroadcastWaiter.cpp  BroadcastWaiter.hpp  CMakeLists.txt  CompleteBlockSaver.cpp  CompleteBlockSaver.hpp  ContributionNotifier.cpp  ContributionNotifier.hpp  ContributorsDataWaiter.cpp  ContributorsDataWaiter.hpp  DataRelay.cpp  DataRelay.hpp  ElectionNotifier.cpp  ElectionNotifier.hpp  ElectionWaiter.cpp  ElectionWaiter.hpp  InspectionWaiter.cpp  InspectionWaiter.hpp  NominatorValidator.cpp  NominatorValidator.hpp  PendingBlockRemover.cpp  PendingBlockRemover.hpp  PendingBlockSaver.cpp  PendingBlockSaver.hpp  SlotContext.hpp  SlotHandler.cpp  SlotHandler.hpp  TimerWheel.hpp
node/src/slot/ut/: CMakeLists.txt  TestSlotHandler.cpp  TestTimerWheel.cpp
node/src/slot/ut/mocks/: TimerWheelMock.hpp
node/src/ut/: CMakeLists.txt  TestBuffer.cpp  TestConfigurationReader.cpp
node/src/ut/TestConfigurationReader/: missingEntry.yaml
node/src/ut/mocks/: BufferMock.hpp  validConfig.yaml
redis/: CMakeLists.txt  main copy.cpp  main_boost_test.cpp
user/: .bash_aliases  .bashrc  README.md
user/Beast/: Beast.cpp  CMakeLists.txt
user/Beast/HTTP/: CMakeLists.txt  HTTPClient.cpp  HTTPServerV2.cpp
user/Beast/WebSocket/: WebSocketClient.cpp  WebSocketServer.cpp
user/docs/: client_fetch_initial_data.puml
user/redis/: main_boost_test copy.cpp  main_simple_block_example.cpp
