cmake_minimum_required(VERSION 2.8)
project(node)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED true)

set(COMMON_CMAKE_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/../common/cmake")
set(DEDICATED_CMAKE_MODULES "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
set(CMAKE_MODULE_PATH ${DEDICATED_CMAKE_MODULES} ${COMMON_CMAKE_MODULES} ${CMAKE_MODULE_PATH})

include(add_ut)

add_subdirectory(src)